--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">Wardroba</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="su_Title">Sign Up</string>
+    <string name="su_hint_email">Enter your Email</string>
+    <string name="su_hint_password">Enter your Password</string>
+    <string name="btn_submit">Submit</string>
+    <string name="su_hint_confirm">Confirm your Password</string>
+    <string name="si_title">Sign In</string>
     <string-array name="accessory_types">
         <item name="Hats" type="string">Hats</item>
         <item name="Shirts" type="string">Shirts</item>
